<resources>
    <string name="app_name">My Students</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_home">Home Work</string>
    <string name="menu_event">Event</string>
    <string name="menu_timtbl">Time Table</string>
    <string name="menu_upld">Uplink</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_sett">Settings</string>
    <string name="menu_log">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="reg_no">Teacher ID</string>
    <string name="school_name">School Name</string>
    <string name="log_in">Log In</string>
    <string name="upload_file">Select File</string>
    <string name="upload">Upload</string>
    <string name="student">Student</string>
    <string name="modify">Modify</string>
    <string name="faculty">Faculty</string>
    <string name="find_id">Find ID</string>
    <string name="find">Find</string>
    <string name="edit_details">Edit Details</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="sj_email">shujayke@gmail.com</string>
    <string name="contact">Contact</string>
    <string name="submit">Submit</string>

</resources>