<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_parents"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_notes"
            android:title="@string/menu_event"/>
        <item
            android:id="@+id/nav_upl"
            android:icon="@drawable/ic_upload"
            android:title="@string/menu_upld" />
        <item
            android:id="@+id/nav_timeTable"
            android:icon="@drawable/ic_timeline"
            android:title="@string/menu_timtbl" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_sett" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_log" />

    </group>
</menu>