<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_profile">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.mystudents.ui.homework.HomeWorkFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_homework" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.mystudents.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_event"
        android:name="com.example.mystudents.ui.event.Event"
        android:label="@string/menu_event"
        tools:layout="@layout/event_fragment" />
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.mystudents.ui.logout.Logout"
        android:label="logout_fragment"
        tools:layout="@layout/logout_fragment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.mystudents.ui.settings.Settings"
        android:label="@string/menu_sett"
        tools:layout="@layout/settings_fragment" />
    <fragment
        android:id="@+id/nav_timeTable"
        android:name="com.example.mystudents.ui.timetable.TimeTable"
        android:label="@string/menu_timtbl"
        tools:layout="@layout/time_table_fragment" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.mystudents.ui.profile.Profile"
        android:label="@string/menu_profile"
        tools:layout="@layout/profile_fragment" />
    <fragment
        android:id="@+id/nav_upl"
        android:name="com.example.mystudents.ui.uplink.Uplink"
        android:label="@string/menu_upld"
        tools:layout="@layout/fragment_uplink" />
</navigation>